  - test_population is better now, but still way to go.
  - separate simuComplexDisease.py into simuComplexDisease.py and 
    analComplexDisease.py. The first script will run simulation and generate
    a population saved in binary format. The second script will run the old
    analyses (apply penetrance function, plot figures, apply genehunter etc.)

version 0.6.9 (Rev71) - Nov, 19th,  2005
  - add pyOperator, the ultimate hybrid operator, this will considerably simplify many
    coomplicated tasks 
  - start to convert all test cases to PyUnit. This means better test cases and more
    thorough testing. I expect that code 0.7.0 is a version with much less bugs due to
    this change. 
  - fix a bug in initializer (parameter proportion)
  - fix a bug in recombinator concerning direct chrom copy.
  - remove autoconf, Makefile.icc stuff to avoid confusion.
  - fix a bug in migrator/MigrByCounts, which is introduced in 0.6.8
  - add subversion  revision number to doc and binary releases for
    better tracking of changes.
  - fix windows binary import problem caused by mingw/msvcrt. Details please see 
    INSTALL.
  - fix a bug in AffectedSibpairSample with countOnly parameter. (Not able to
    handle None return.)
  - add parameter --resampleOnly and --reAnalyzeOnly
  - remove --optimzied --optimized etc from sys.argv after processing in simuOpt.py
  - add simuViewPop.py (module and command) that can load and view popularion
    property, calculate statistics etc.

version 0.6.8 - Sep 21st, 2005
  - fix a reporting bug in simuCDCV.py
  - support sex chromosome and sex chromosome related mating, recombination issues.
      -- sexChrom() in population::population(), 
      -- stop recombination between XY of male individual
      -- determine sex in random mating by sex chromosome
  - add parameters atPloidy, sex to initializers. Now, you can 
    initialize individuals at ploidy level and control assignment of sex.